# cuPDLP-C

./: CMakeLists.txt  README.md
culpy/: CMakeLists.txt  culpymodule.c
cupdlp/: cupdlp_solver.c  cupdlp_solver.h
py/: culpy_test.py  cvx_test.py
